Expose query metadata to SQL functions
Add QueryContext interface to capture query metadata and provide to
 function implementations.

Update FunctionBuilder to take QueryContext in addition to function
arguments when evaluating a SQL function.

Implement constant date time functions using QueryContext.

Signed-off-by: MaxKsyunz <maxk@bitquilltech.com>