@@ -6,7 +6,6 @@
 package org.opensearch.sql.expression.datetime;
 
 import static org.opensearch.sql.data.type.ExprCoreType.DOUBLE;
-import static org.opensearch.sql.expression.function.BuiltinFunctionRepository.DEFAULT_NAMESPACE;
 
 import java.time.Instant;
 import java.time.LocalDate;
@@ -19,6 +18,8 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.opensearch.sql.data.model.ExprDateValue;
 import org.opensearch.sql.data.model.ExprDatetimeValue;
+import org.opensearch.sql.data.model.ExprMissingValue;
+import org.opensearch.sql.data.model.ExprNullValue;
 import org.opensearch.sql.data.model.ExprTimestampValue;
 import org.opensearch.sql.data.model.ExprValue;
 import org.opensearch.sql.expression.DSL;
@@ -26,6 +27,7 @@ import org.opensearch.sql.expression.Expression;
 import org.opensearch.sql.expression.ExpressionTestBase;
 import org.opensearch.sql.expression.FunctionExpression;
 import org.opensearch.sql.expression.env.Environment;
+import org.opensearch.sql.expression.function.BuiltinFunctionName;
 import org.opensearch.sql.expression.function.BuiltinFunctionRepository;
 import org.opensearch.sql.expression.function.FunctionName;
 import org.opensearch.sql.expression.function.FunctionSignature;
@@ -37,20 +39,15 @@ public class DateTimeTestBase extends ExpressionTestBase {
   @Mock
   protected Environment<Expression, ExprValue> env;
 
-  @Mock
-  protected Expression nullRef;
+  protected Expression nullRef = DSL.literal(ExprNullValue.of());
 
-  @Mock
-  protected Expression missingRef;
+  protected Expression missingRef = DSL.literal(ExprMissingValue.of());
 
   @Autowired
   protected BuiltinFunctionRepository functionRepository;
 
   protected FunctionExpression maketime(Expression hour, Expression minute, Expression second) {
-    var func = functionRepository.resolve(Collections.singletonList(DEFAULT_NAMESPACE),
-        new FunctionSignature(new FunctionName("maketime"),
-        List.of(DOUBLE, DOUBLE, DOUBLE)));
-    return (FunctionExpression)func.apply(List.of(hour, minute, second));
+    return (FunctionExpression) functionRepository.compile(BuiltinFunctionName.MAKETIME, List.of(hour, minute, second));
   }
 
   protected LocalTime maketime(Double hour, Double minute, Double second) {
@@ -59,10 +56,8 @@ public class DateTimeTestBase extends ExpressionTestBase {
   }
 
   protected FunctionExpression makedate(Expression year, Expression dayOfYear) {
-    var func = functionRepository.resolve(Collections.singletonList(DEFAULT_NAMESPACE),
-        new FunctionSignature(new FunctionName("makedate"),
-        List.of(DOUBLE, DOUBLE)));
-    return (FunctionExpression)func.apply(List.of(year, dayOfYear));
+    return (FunctionExpression)
+        functionRepository.compile(BuiltinFunctionName.MAKEDATE, List.of(year, dayOfYear));
   }
 
   protected LocalDate makedate(Double year, Double dayOfYear) {
@@ -70,9 +65,8 @@ public class DateTimeTestBase extends ExpressionTestBase {
   }
 
   protected FunctionExpression unixTimeStampExpr() {
-    var func = functionRepository.resolve(Collections.singletonList(DEFAULT_NAMESPACE),
-        new FunctionSignature(new FunctionName("unix_timestamp"), List.of()));
-    return (FunctionExpression)func.apply(List.of());
+    return (FunctionExpression)
+        functionRepository.compile(BuiltinFunctionName.UNIX_TIMESTAMP, List.of());
   }
 
   protected Long unixTimeStamp() {
@@ -80,10 +74,8 @@ public class DateTimeTestBase extends ExpressionTestBase {
   }
 
   protected FunctionExpression unixTimeStampOf(Expression value) {
-    var func = functionRepository.resolve(Collections.singletonList(DEFAULT_NAMESPACE),
-        new FunctionSignature(new FunctionName("unix_timestamp"),
-        List.of(value.type())));
-    return (FunctionExpression)func.apply(List.of(value));
+    return (FunctionExpression)
+        functionRepository.compile(BuiltinFunctionName.UNIX_TIMESTAMP, List.of(value));
   }
 
   protected Double unixTimeStampOf(Double value) {
@@ -103,17 +95,13 @@ public class DateTimeTestBase extends ExpressionTestBase {
   }
 
   protected FunctionExpression fromUnixTime(Expression value) {
-    var func = functionRepository.resolve(Collections.singletonList(DEFAULT_NAMESPACE),
-        new FunctionSignature(new FunctionName("from_unixtime"),
-        List.of(value.type())));
-    return (FunctionExpression)func.apply(List.of(value));
+    return (FunctionExpression)
+        functionRepository.compile(BuiltinFunctionName.FROM_UNIXTIME, List.of(value));
   }
 
   protected FunctionExpression fromUnixTime(Expression value, Expression format) {
-    var func = functionRepository.resolve(Collections.singletonList(DEFAULT_NAMESPACE),
-        new FunctionSignature(new FunctionName("from_unixtime"),
-        List.of(value.type(), format.type())));
-    return (FunctionExpression)func.apply(List.of(value, format));
+    return (FunctionExpression)
+        functionRepository.compile(BuiltinFunctionName.FROM_UNIXTIME, List.of(value, format));
   }
 
   protected LocalDateTime fromUnixTime(Long value) {
